--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6687860250561653" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
+ <!-- Header -->   
+ <header class="header">
     <div class="container">
         <nav class="navbar">
             <a href="index.html" class="logo">
@@ -66,9 +66,9 @@
                 <a href="index.html" class="nav-link active"><i class="fas fa-home"></i> Home</a>
                 <a href="attendance.html" class="nav-link"><i class="fas fa-clipboard-list"></i> Attendance</a>
                 <a href="certificate.html" class="nav-link"><i class="fas fa-award"></i> Certificate</a>
-                <a href="pages/blog.html" class="nav-link"><i class="fas fa-blog"></i> Blog</a>
-                <a href="pages/tools.html" class="nav-link"><i class="fas fa-tools"></i> Tools</a>
-                <a href="pages/training-programs.html" class="nav-link"><i class="fas fa-graduation-cap"></i> Training Programs</a>
+                <a href="blog.html" class="nav-link"><i class="fas fa-blog"></i> Blog</a>
+                <a href="tools.html" class="nav-link"><i class="fas fa-tools"></i> Tools</a>
+                <a href="training-programs.html" class="nav-link"><i class="fas fa-graduation-cap"></i> Training</a>
             </div>
             
             <div class="mobile-toggle" id="mobileToggle">
