--- a/pages/affiliate-disclosure.html
+++ b/pages/affiliate-disclosure.html
@@ -11,27 +11,32 @@
     <meta name="description" content="Affiliate disclosure for Safety Training Manager - Our commitment to transparency in affiliate relationships.">
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="../index.html" class="nav-logo">
-                <img src="../assets/logo.png" alt="Safety Training Manager Logo" height="40">
-                <span>Safety Training Manager</span>
+    <header class="header">
+    <div class="container">
+        <nav class="navbar">
+            <a href="../index.html" class="logo">
+                <i class="fas fa-certificate logo-icon"></i>
+                <div class="logo-text">
+                    <span class="logo-main">Safety Training</span>
+                    <span class="logo-sub">Manager</span>
+                </div>
             </a>
-            <ul class="nav-menu">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../attendance.html">Attendance</a></li>
-                <li><a href="../certificate.html">Certificate</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="tools.html">Tools</a></li>
-            </ul>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
+            
+            <div class="nav-links" id="navLinks">
+                <a href="../index.html" class="nav-link"><i class="fas fa-home"></i> Home</a>
+                <a href="../attendance.html" class="nav-link"><i class="fas fa-clipboard-list"></i> Attendance</a>
+                <a href="../certificate.html" class="nav-link"><i class="fas fa-award"></i> Certificate</a>
+                <a href="../blog.html" class="nav-link"><i class="fas fa-blog"></i> Blog</a>
+                <a href="../tools.html" class="nav-link"><i class="fas fa-tools"></i> Tools</a>
+                <a href="../training-programs.html" class="nav-link"><i class="fas fa-graduation-cap"></i> Training</a>
             </div>
-        </div>
-    </nav>
+            
+            <div class="mobile-toggle" id="mobileToggle">
+                <i class="fas fa-bars"></i>
+            </div>
+        </nav>
+    </div>
+</header>
 
     <main class="container">
         <div class="page-header">
